--- a/index.html
+++ b/index.html
@@ -182,13 +182,13 @@
 						<div class="form-row">
 							<div class="custom-col">
 								<div class="form-group ">
-									<label>Socialpanel Kullanıcı Adı</label>
+									<label>SocialPilipinas User name </label>
 									<input class="form-control" type="text" name="LoginForm[username]"/>
 								</div>
 							</div>
 							<div class="custom-col">
 								<div class="form-group ">
-									<label>Socialpanel Şifre</label>
+									<label>SocialPilipinas Password</label>
 									<input class="form-control" type="password" name="LoginForm[password]"/>
 								</div>
 							</div>
@@ -201,14 +201,14 @@
 											<input type="checkbox" name="LoginForm[remember]" id="block_68_remember_me">
 											<span class="checkmark"></span>
 										</label>
-										<label class="form-group__label-title" for="block_68_remember_me">Beni Hatırla</label>
+										<label class="form-group__label-title" for="block_68_remember_me">Tandaan mo ako</label>
 									</div>
 								</div>
 							</div>
 							<div class="custom-col">
 								<div class="form-group ">
 																			<div class="sign-in__forgot">
-											<a href="/resetpassword">Şifremi Unuttum</a>
+											<a href="/resetpassword">Nakalimutan ko ang aking password</a>
 										</div>
 																	</div>
 							</div>
@@ -216,7 +216,7 @@
 						<div class="form-row">
 							<div class="custom-col">
 								<div class="form-group d-flex component_button_submit ">
-									<button class="btn btn-big-primary" type="submit">Giriş </button>
+									<button class="btn btn-big-primary" type="submit">Sign in </button>
 								</div>
 							</div>
 						</div>
@@ -224,8 +224,8 @@
 								<div class="custom-col">
 									<div class="form-group d-flex justify-content-center ">
 										<div class="block-signin__remember">
-											<p>Hesabınız yok mu?</p>
-											<a class="block-signin__link" href="/signup">Ücretsiz Kayıt Ol</a>
+											<p>wala ka bang account?</p>
+											<a class="block-signin__link" href="/signup">Sign up free</a>
 										</div>
 									</div>
 								</div>
@@ -266,7 +266,7 @@
                   </h2>
                 </div>
                 <div class="totals-block__card-name">
-                                      <p>Toplam Servis</p>
+                                      <p>kabuuang serbisyo</p>
                                   </div>
               </div>
             </div>
@@ -299,7 +299,7 @@
                   </h2>
                 </div>
                 <div class="totals-block__card-name">
-                                      <p>Toplam Sipariş</p>
+                                      <p>kabuuang order</p>
                                   </div>
               </div>
             </div>
@@ -332,7 +332,7 @@
                   </h2>
                 </div>
                 <div class="totals-block__card-name">
-                                      <p>Toplam Kullanıcı</p>
+                                      <p>kabuuang mga gumagamit</p>
                                   </div>
               </div>
             </div>
@@ -343,14 +343,14 @@
     <div class="row">
         <div class="col-12">
             <div class="text-block__title">
-                                    <h1 class="text-center"><span style="text-align: CENTER">Instagram Takipçi Satın Al</span></h1>
+                                    <h1 class="text-center"><span style="text-align: CENTER">Bumili Instagram Followers</span></h1>
                             </div>
         </div>
     </div>
     <div class="row">
         <div class="col-12">
             <div class="text-block__description">
-                                    <p class="text-justify"><span style="text-align: JUSTIFY">Milyonlarca insanın kullanmakta olduğu</span><span style="text-align: JUSTIFY"><strong style="font-weight: bold"> Instagram takipçi satın al</strong></span><span style="text-align: JUSTIFY"> hizmeti ile</span><span style="text-align: JUSTIFY"><strong style="font-weight: bold"> </strong></span><span style="text-align: JUSTIFY">&nbsp;kitleniz sayesinde büyük markalar ile işbirliği yapabileceğiniz ve böylelikle sosyal medya üzerinden geçirdiğiniz vakti maddi olarak gelire dönüştürebileceğiniz bir sosyal medya platformudur. Her geçen bugün daha fazla kullanıcıya ulaşan ve dünyanın birçok farklı yerinde en yaygın olarak kullanılan sosyal medya platformu olarak bilinen Instagram, kullanıcılarına takipçileri ile kısa videolar ve fotoğraflar paylaşma şansı tanımaktadır. Eğer siz de bu sosyal medya platformu üzerinde fenomen olmak yani geniş bir kitleye ulaşmak istiyorsanız takipçi sayınızı arttırmak için tercih edebileceğiniz çeşitli profesyonel hizmetler olduğunu göz ardı etmemelisiniz.</span></p>
+                                    <p class="text-justify"><span style="text-align: JUSTIFY">Ginagamit ng milyun-milyong tao</span><span style="text-align: JUSTIFY"><strong style="font-weight: bold"> Buy Instagram Followers</strong></span><span style="text-align: JUSTIFY"> with service</span><span style="text-align: JUSTIFY"><strong style="font-weight: bold"> </strong></span><span style="text-align: JUSTIFY">&nbsp;</span>Ito ay isang platform ng social media kung saan maaari kang makipagtulungan sa malalaking tatak salamat sa iyong madla at sa gayon ay gawing kita sa pananalapi ang oras na iyong ginugugol sa social media. Ang Instagram, na umaabot sa mas maraming user araw-araw at kilala bilang ang pinakatinatanggap na ginagamit na platform ng social media sa maraming iba't ibang bahagi ng mundo, ay nagbibigay ng pagkakataon sa mga user nito na magbahagi ng mga maiikling video at larawan sa kanilang mga tagasubaybay. Kung nais mong maging isang kababalaghan sa platform ng social media na ito, iyon ay, nais na maabot ang isang malawak na madla, hindi mo dapat balewalain na mayroong iba't ibang mga propesyonal na serbisyo na maaari mong piliin upang madagdagan ang iyong bilang ng mga tagasunod.</p>
 <p><br></p>
 <h2 class="text-center"><span style="text-align: CENTER">SMM PANEL</span></h2>
 <p><br></p>
