--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Ang iyong maaasahang address para sumikat sa mga social media sites tulad ng Instagram, Facebook at Tiktok.">
   <meta name="google-site-verification" content="CKvgSpf6zcuo0EGJS55xkAvgT3d8oqaobLPkofDxM-Q" />
 
-      <link rel="shortcut icon" type="image/ico" href="https://cdn.mypanel.link/4eb905/e48g5og3unr6kq37.ico" />
+      <link rel="shortcut icon" type="image/ico" href="https://upload.wikimedia.org/wikipedia/commons/thumb/9/99/Flag_of_the_Philippines.svg/640px-Flag_of_the_Philippines.svg.png" />
     <link rel="icon" type="image/png" sizes="192x192" href="https://cdn.mypanel.link/4eb905/e48g5og3unr6kq37.ico" />
     <link rel="icon" type="image/png" sizes="512x512" href="https://cdn.mypanel.link/4eb905/e48g5og3unr6kq37.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.mypanel.link/4eb905/e48g5og3unr6kq37.ico" />
